# Stronger-Hand

./: README.md
Programming_Part_for_tests/: Test_Main.ino  Test_Main_new.ino
Programming_Part_for_tests/libraries/Finger/: Finger.cpp  Finger.h
Programming_Part_for_tests/libraries/Greifer/: Greifer.cpp  Greifer.h
Programming_Part_for_tests/libraries/Joint/: Joint.cpp  Joint.h
Programming_Part_for_tests/libraries/Magnet/: Magnet.h
Programming_Part_for_tests/libraries/Motor/: Motor.cpp  Motor.h
Programming_Part_for_tests/libraries/Sensor/: Sensor.h
awesome_control/: Greifer.cpp  Greifer.h  Joint.cpp  Joint.h  Motor.cpp  Motor.h  awesome_control.ino
awesome_control/libraries/Finger/: Finger.cpp
awesome_control/libraries/Magnet/: Magnet.cpp
awesome_control/libraries/Motor/: Motor.cpp  Motor.h
awesome_control/libraries/Sensor/: Sensor.cpp
devel/: .rosinstall  setup.sh
devel/lib/pkgconfig/: gripper_control.pc
devel/share/gripper_control/cmake/: gripper_controlConfig.cmake
src/gripper_control/: CMakeLists.txt  package.xml
src/gripper_control/launch/: gripper.launch
src/gripper_control/src/: gripper_control.cpp
