<?xml version="1.0"?>
<package format="2">
    <name>gripper_control</name>
    <version>0.0.0</version>
    <description>controllers</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <export>
    </export>
</package>
